<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.Main">

    <TextView
        android:id="@+id/hq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ayte"
        android:textColor="#f80"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout android:id="@+id/sign_in_bar"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        android:padding="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_why"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#808080" />
    </LinearLayout>

    <ImageView
        android:id="@+id/splash_icon"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_above="@id/sign_in_bar"
        android:layout_marginBottom="30sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_in_bar"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>