<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_nowords"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alphabet_one"
                android:background="@drawable/text_view_selector"
                android:layout_width="0sp"
                android:layout_height="35sp"
                android:layout_weight="1"
                android:text="A"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/alphabet_two"
                android:background="@drawable/text_view_selector"
                android:layout_width="0sp"
                android:layout_height="35sp"
                android:layout_weight="1"
                android:text="B"
                android:textSize="20sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alphabet_three"
                android:background="@drawable/text_view_selector"
                android:layout_width="45sp"
                android:layout_height="match_parent"
                android:text="A"
                android:textSize="20sp"
                android:layout_margin="1sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/centre_alphabet"
                android:background="@drawable/text_view_selector"
                android:layout_width="55sp"
                android:layout_height="55sp"
                android:text="B"
                android:layout_margin="1sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="40sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/alphabet_four"
                android:background="@drawable/text_view_selector"
                android:layout_width="45sp"
                android:layout_height="match_parent"
                android:text="A"
                android:textSize="20sp"
                android:layout_margin="1sp"
                android:textAlignment="center"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alphabet_five"
                android:background="@drawable/text_view_selector"
                android:layout_width="0sp"
                android:layout_height="35sp"
                android:layout_weight="1"
                android:text="A"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/alphabet_six"
                android:background="@drawable/text_view_selector"
                android:layout_width="0sp"
                android:layout_height="35sp"
                android:layout_weight="1"
                android:text="B"
                android:textSize="20sp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/clear"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete" >
        </ImageButton>

        <ImageButton
            android:id="@+id/add"
            android:layout_toLeftOf="@id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add" >
        </ImageButton>

        <TextView
            android:id="@+id/word"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/add"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:hint="@string/type_word"
            android:textSize="23sp"
            android:inputType="text" >
        </TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expected_score"
            android:textColor="@color/blue"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/expected_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_words"
            android:textColor="@color/blue"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/WordList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>
</ScrollView>